Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-10553

WinRar SFX have corrupted image

    XMLWordPrintable

Details

    Description

      Image at the left portion of window is corrupted.
      SFX was created using WinRAR 4.20 .
      Tested with r69965.

      Attachments

        1. ReactOS_rle4.png
          25 kB
          vgal
        2. rle4_fix_by_Vort_v2.patch
          4 kB
          Vort
        3. rle4_fix_by_Vort_v1.patch
          4 kB
          Vort
        4. bitmap.bmp
          3 kB
          Mark Jansen
        5. empty.exe
          99 kB
          Vort
        6. ros_rar_sfx_bug.png
          28 kB
          Vort
        7. w7_rar_sfx_good.png
          33 kB
          Vort

        Issue Links

          Activity

            People

              katayama_hirofumi_mz Katayama Hirofumi MZ
              Vort Vort
              Votes:
              6 Vote for this issue
              Watchers:
              8 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: